--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-50921035-1', 'dangonews.herokuapp.com');
+      ga('require', 'displayfeatures');
       ga('send', 'pageview');
     </script>
     <!-- end google analytics -->
