delete post and confirm again

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,8 +16,8 @@
   <title>Dango Newsletter</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Dango Newsletter Email Forms">
-  <meta name="keywords" content="Dango Newsletter">
+  <meta name="description" content="Dango Newsletter 당고 맛있는 맛집을 찾을 수 있는 믿을 수 있는 방법">
+  <meta name="keywords" content="Dango Newsletter 당고 뉴스레터 맛집 리스트">
   <script type="text/javascript" src="http://www.google.com/jsapi"></script>
   <script type="text/javascript">
   google.load("jquery", "1.7.1");
