--- a/views/index.erb
+++ b/views/index.erb
@@ -642,6 +642,20 @@
                 <div class="poweredWrapper">
                   <span class="poweredBy"><a href="http://www.mailchimp.com/monkey-rewards/?utm_source=freemium_newsletter&utm_medium=email&utm_campaign=monkey_rewards&aid=4a4d75631c3e575344694e80e&afl=1"><img src="http://cdn-images.mailchimp.com/monkey_rewards/MC_MonkeyReward_15.png" border="0" alt="Email Marketing Powered by MailChimp" title="MailChimp Email Marketing" width="139" height="54"></a></span>
                 </div>
+                <!-- KISSmetrics tracking snippet -->
+                  <script type="text/javascript">var _kmq = _kmq || [];
+                  var _kmk = _kmk || 'b590b4c643eb5ab21ecc462513c8a6e2037c0861';
+                  function _kms(u){
+                    setTimeout(function(){
+                      var d = document, f = d.getElementsByTagName('script')[0],
+                      s = d.createElement('script');
+                      s.type = 'text/javascript'; s.async = true; s.src = u;
+                      f.parentNode.insertBefore(s, f);
+                    }, 1);
+                  }
+                  _kms('//i.kissmetrics.com/i.js');
+                  _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+                  </script>
                 <!-- begin google analytics -->
                 <script>
                 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
